--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,17 @@
 fastapi==0.104.1
 uvicorn[standard]==0.24.0
-langchain==0.1.0
-langchain-community==0.0.10
-langchain-google-genai==0.0.11
-langchain-core==0.1.10
-google-generativeai>=0.4.1,<0.5.0
-faiss-cpu==1.7.4
-pypdf==3.17.4
-requests==2.31.0
 pydantic==2.5.0
 python-dotenv==1.0.0
-python-docx==1.1.0
+requests==2.31.0
+PyMuPDF==1.23.26
+numpy==1.24.3
+scipy==1.10.1
+nltk==3.8.1
+langchain==0.1.20
+langchain-core==0.1.52
+langchain-community==0.0.38
+langchain-google-genai==1.0.3
+google-generativeai==0.3.2
+faiss-cpu==1.7.4
 python-multipart==0.0.6
 extract-msg==0.45.0
