--- a/requirements.txt
+++ b/requirements.txt
@@ -11,7 +11,7 @@ langchain==0.1.20
 langchain-core==0.1.52
 langchain-community==0.0.38
 langchain-google-genai==1.0.3
-google-generativeai==0.3.2
+google-generativeai>=0.5.2,<0.6.0
 faiss-cpu==1.7.4
 python-multipart==0.0.6
 extract-msg==0.45.0
